parser.output
State 98 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: declaracao_lista

    2 declaracao_lista: declaracao_lista declaracao
    3                 | declaracao

    4 declaracao: var_declaracao
    5           | fun_declaracao

    6 var_declaracao: tipo_especificador IDENTIFICADOR SEMICOLON
    7               | tipo_especificador IDENTIFICADOR L_BRAC NUMERO R_BRAC SEMICOLON

    8 tipo_especificador: INT
    9                   | VOID

   10 fun_declaracao: tipo_especificador IDENTIFICADOR L_PAR params R_PAR composto_decl

   11 params: param_list
   12       | VOID

   13 param_list: param_list COMMA param
   14           | param

   15 param: tipo_especificador IDENTIFICADOR
   16      | tipo_especificador IDENTIFICADOR L_BRAC R_BRAC

   17 composto_decl: L_CHAVES local_declaracoes statement_list R_CHAVES

   18 local_declaracoes: local_declaracoes var_declaracao
   19                  | ε

   20 statement_list: statement_list statement
   21               | ε

   22 statement: expressao_decl
   23          | composto_decl
   24          | selecao_decl
   25          | iteracao_decl
   26          | retorno_decl

   27 expressao_decl: expressao SEMICOLON
   28               | SEMICOLON

   29 selecao_decl: IF L_PAR expressao R_PAR statement
   30             | IF L_PAR expressao R_PAR statement ELSE statement

   31 iteracao_decl: WHILE L_PAR expressao R_PAR statement

   32 retorno_decl: RETURN SEMICOLON
   33             | RETURN expressao SEMICOLON

   34 expressao: var ATRIBUICAO expressao
   35          | simples_expressao

   36 var: IDENTIFICADOR
   37    | IDENTIFICADOR L_BRAC expressao R_BRAC

   38 simples_expressao: soma_expressao relacional soma_expressao
   39                  | soma_expressao

   40 relacional: MENOR
   41           | MAIOR
   42           | MENOR_IGUAL
   43           | DIFERENTE
   44           | MAIOR_IGUAL
   45           | IGUAL

   46 soma_expressao: soma_expressao soma termo
   47               | termo

   48 soma: MAIS
   49     | MENOS

   50 termo: termo mult fator
   51      | fator

   52 mult: MULTIPLICACAO
   53     | DIVISAO

   54 fator: L_PAR expressao R_PAR
   55      | var
   56      | ativacao
   57      | NUMERO

   58 ativacao: IDENTIFICADOR L_PAR args R_PAR

   59 args: arg_list
   60     | ε

   61 arg_list: arg_list COMMA expressao
   62         | expressao


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUMERO <int> (258) 7 57
    IDENTIFICADOR <int> (259) 6 7 10 15 16 36 37 58
    MAIS <int> (260) 48
    MAIOR <int> (261) 41
    ATRIBUICAO <int> (262) 34
    DIVISAO <int> (263) 53
    MENOS <int> (264) 49
    MULTIPLICACAO <int> (265) 52
    L_PAR <int> (266) 10 29 30 31 54 58
    R_PAR <int> (267) 10 29 30 31 54 58
    L_CHAVES <int> (268) 17
    R_CHAVES <int> (269) 17
    L_BRAC <int> (270) 7 16 37
    R_BRAC <int> (271) 7 16 37
    COMMA <int> (272) 13 61
    SEMICOLON <int> (273) 6 7 27 28 32 33
    MENOR <int> (274) 40
    MAIOR_IGUAL <int> (275) 44
    MENOR_IGUAL <int> (276) 42
    DIFERENTE <int> (277) 43
    IGUAL <int> (278) 45
    IF <int> (279) 29 30
    INT <int> (280) 8
    ELSE <int> (281) 30
    VOID <int> (282) 9 12
    WHILE <int> (283) 31
    RETURN <int> (284) 32 33


Nonterminals, with rules where they appear

    $accept (30)
        on left: 0
    programa <node> (31)
        on left: 1
        on right: 0
    declaracao_lista <node> (32)
        on left: 2 3
        on right: 1 2
    declaracao <node> (33)
        on left: 4 5
        on right: 2 3
    var_declaracao <node> (34)
        on left: 6 7
        on right: 4 18
    tipo_especificador <node> (35)
        on left: 8 9
        on right: 6 7 10 15 16
    fun_declaracao <node> (36)
        on left: 10
        on right: 5
    params <node> (37)
        on left: 11 12
        on right: 10
    param_list <node> (38)
        on left: 13 14
        on right: 11 13
    param <node> (39)
        on left: 15 16
        on right: 13 14
    composto_decl <node> (40)
        on left: 17
        on right: 10 23
    local_declaracoes <node> (41)
        on left: 18 19
        on right: 17 18
    statement_list <node> (42)
        on left: 20 21
        on right: 17 20
    statement <node> (43)
        on left: 22 23 24 25 26
        on right: 20 29 30 31
    expressao_decl <node> (44)
        on left: 27 28
        on right: 22
    selecao_decl <node> (45)
        on left: 29 30
        on right: 24
    iteracao_decl <node> (46)
        on left: 31
        on right: 25
    retorno_decl <node> (47)
        on left: 32 33
        on right: 26
    expressao <node> (48)
        on left: 34 35
        on right: 27 29 30 31 33 34 37 54 61 62
    var <node> (49)
        on left: 36 37
        on right: 34 55
    simples_expressao <node> (50)
        on left: 38 39
        on right: 35
    relacional <node> (51)
        on left: 40 41 42 43 44 45
        on right: 38
    soma_expressao <node> (52)
        on left: 46 47
        on right: 38 39 46
    soma <node> (53)
        on left: 48 49
        on right: 46
    termo <node> (54)
        on left: 50 51
        on right: 46 47 50
    mult <node> (55)
        on left: 52 53
        on right: 50
    fator <node> (56)
        on left: 54 55 56 57
        on right: 50 51
    ativacao <node> (57)
        on left: 58
        on right: 56
    args <node> (58)
        on left: 59 60
        on right: 58
    arg_list <node> (59)
        on left: 61 62
        on right: 59 61


State 0

    0 $accept: • programa $end

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    programa            go to state 3
    declaracao_lista    go to state 4
    declaracao          go to state 5
    var_declaracao      go to state 6
    tipo_especificador  go to state 7
    fun_declaracao      go to state 8


State 1

    8 tipo_especificador: INT •

    $default  reduce using rule 8 (tipo_especificador)


State 2

    9 tipo_especificador: VOID •

    $default  reduce using rule 9 (tipo_especificador)


State 3

    0 $accept: programa • $end

    $end  shift, and go to state 9


State 4

    1 programa: declaracao_lista •
    2 declaracao_lista: declaracao_lista • declaracao

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 1 (programa)

    declaracao          go to state 10
    var_declaracao      go to state 6
    tipo_especificador  go to state 7
    fun_declaracao      go to state 8


State 5

    3 declaracao_lista: declaracao •

    $default  reduce using rule 3 (declaracao_lista)


State 6

    4 declaracao: var_declaracao •

    $default  reduce using rule 4 (declaracao)


State 7

    6 var_declaracao: tipo_especificador • IDENTIFICADOR SEMICOLON
    7               | tipo_especificador • IDENTIFICADOR L_BRAC NUMERO R_BRAC SEMICOLON
   10 fun_declaracao: tipo_especificador • IDENTIFICADOR L_PAR params R_PAR composto_decl

    IDENTIFICADOR  shift, and go to state 11


State 8

    5 declaracao: fun_declaracao •

    $default  reduce using rule 5 (declaracao)


State 9

    0 $accept: programa $end •

    $default  accept


State 10

    2 declaracao_lista: declaracao_lista declaracao •

    $default  reduce using rule 2 (declaracao_lista)


State 11

    6 var_declaracao: tipo_especificador IDENTIFICADOR • SEMICOLON
    7               | tipo_especificador IDENTIFICADOR • L_BRAC NUMERO R_BRAC SEMICOLON
   10 fun_declaracao: tipo_especificador IDENTIFICADOR • L_PAR params R_PAR composto_decl

    L_PAR      shift, and go to state 12
    L_BRAC     shift, and go to state 13
    SEMICOLON  shift, and go to state 14


State 12

   10 fun_declaracao: tipo_especificador IDENTIFICADOR L_PAR • params R_PAR composto_decl

    INT   shift, and go to state 1
    VOID  shift, and go to state 15

    tipo_especificador  go to state 16
    params              go to state 17
    param_list          go to state 18
    param               go to state 19


State 13

    7 var_declaracao: tipo_especificador IDENTIFICADOR L_BRAC • NUMERO R_BRAC SEMICOLON

    NUMERO  shift, and go to state 20


State 14

    6 var_declaracao: tipo_especificador IDENTIFICADOR SEMICOLON •

    $default  reduce using rule 6 (var_declaracao)


State 15

    9 tipo_especificador: VOID •
   12 params: VOID •

    R_PAR     reduce using rule 12 (params)
    $default  reduce using rule 9 (tipo_especificador)


State 16

   15 param: tipo_especificador • IDENTIFICADOR
   16      | tipo_especificador • IDENTIFICADOR L_BRAC R_BRAC

    IDENTIFICADOR  shift, and go to state 21


State 17

   10 fun_declaracao: tipo_especificador IDENTIFICADOR L_PAR params • R_PAR composto_decl

    R_PAR  shift, and go to state 22


State 18

   11 params: param_list •
   13 param_list: param_list • COMMA param

    COMMA  shift, and go to state 23

    $default  reduce using rule 11 (params)


State 19

   14 param_list: param •

    $default  reduce using rule 14 (param_list)


State 20

    7 var_declaracao: tipo_especificador IDENTIFICADOR L_BRAC NUMERO • R_BRAC SEMICOLON

    R_BRAC  shift, and go to state 24


State 21

   15 param: tipo_especificador IDENTIFICADOR •
   16      | tipo_especificador IDENTIFICADOR • L_BRAC R_BRAC

    L_BRAC  shift, and go to state 25

    $default  reduce using rule 15 (param)


State 22

   10 fun_declaracao: tipo_especificador IDENTIFICADOR L_PAR params R_PAR • composto_decl

    L_CHAVES  shift, and go to state 26

    composto_decl  go to state 27


State 23

   13 param_list: param_list COMMA • param

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    tipo_especificador  go to state 16
    param               go to state 28


State 24

    7 var_declaracao: tipo_especificador IDENTIFICADOR L_BRAC NUMERO R_BRAC • SEMICOLON

    SEMICOLON  shift, and go to state 29


State 25

   16 param: tipo_especificador IDENTIFICADOR L_BRAC • R_BRAC

    R_BRAC  shift, and go to state 30


State 26

   17 composto_decl: L_CHAVES • local_declaracoes statement_list R_CHAVES

    $default  reduce using rule 19 (local_declaracoes)

    local_declaracoes  go to state 31


State 27

   10 fun_declaracao: tipo_especificador IDENTIFICADOR L_PAR params R_PAR composto_decl •

    $default  reduce using rule 10 (fun_declaracao)


State 28

   13 param_list: param_list COMMA param •

    $default  reduce using rule 13 (param_list)


State 29

    7 var_declaracao: tipo_especificador IDENTIFICADOR L_BRAC NUMERO R_BRAC SEMICOLON •

    $default  reduce using rule 7 (var_declaracao)


State 30

   16 param: tipo_especificador IDENTIFICADOR L_BRAC R_BRAC •

    $default  reduce using rule 16 (param)


State 31

   17 composto_decl: L_CHAVES local_declaracoes • statement_list R_CHAVES
   18 local_declaracoes: local_declaracoes • var_declaracao

    INT   shift, and go to state 1
    VOID  shift, and go to state 2

    $default  reduce using rule 21 (statement_list)

    var_declaracao      go to state 32
    tipo_especificador  go to state 33
    statement_list      go to state 34


State 32

   18 local_declaracoes: local_declaracoes var_declaracao •

    $default  reduce using rule 18 (local_declaracoes)


State 33

    6 var_declaracao: tipo_especificador • IDENTIFICADOR SEMICOLON
    7               | tipo_especificador • IDENTIFICADOR L_BRAC NUMERO R_BRAC SEMICOLON

    IDENTIFICADOR  shift, and go to state 35


State 34

   17 composto_decl: L_CHAVES local_declaracoes statement_list • R_CHAVES
   20 statement_list: statement_list • statement

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38
    L_CHAVES       shift, and go to state 26
    R_CHAVES       shift, and go to state 39
    SEMICOLON      shift, and go to state 40
    IF             shift, and go to state 41
    WHILE          shift, and go to state 42
    RETURN         shift, and go to state 43

    composto_decl      go to state 44
    statement          go to state 45
    expressao_decl     go to state 46
    selecao_decl       go to state 47
    iteracao_decl      go to state 48
    retorno_decl       go to state 49
    expressao          go to state 50
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 35

    6 var_declaracao: tipo_especificador IDENTIFICADOR • SEMICOLON
    7               | tipo_especificador IDENTIFICADOR • L_BRAC NUMERO R_BRAC SEMICOLON

    L_BRAC     shift, and go to state 13
    SEMICOLON  shift, and go to state 14


State 36

   57 fator: NUMERO •

    $default  reduce using rule 57 (fator)


State 37

   36 var: IDENTIFICADOR •
   37    | IDENTIFICADOR • L_BRAC expressao R_BRAC
   58 ativacao: IDENTIFICADOR • L_PAR args R_PAR

    L_PAR   shift, and go to state 57
    L_BRAC  shift, and go to state 58

    $default  reduce using rule 36 (var)


State 38

   54 fator: L_PAR • expressao R_PAR

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38

    expressao          go to state 59
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 39

   17 composto_decl: L_CHAVES local_declaracoes statement_list R_CHAVES •

    $default  reduce using rule 17 (composto_decl)


State 40

   28 expressao_decl: SEMICOLON •

    $default  reduce using rule 28 (expressao_decl)


State 41

   29 selecao_decl: IF • L_PAR expressao R_PAR statement
   30             | IF • L_PAR expressao R_PAR statement ELSE statement

    L_PAR  shift, and go to state 60


State 42

   31 iteracao_decl: WHILE • L_PAR expressao R_PAR statement

    L_PAR  shift, and go to state 61


State 43

   32 retorno_decl: RETURN • SEMICOLON
   33             | RETURN • expressao SEMICOLON

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38
    SEMICOLON      shift, and go to state 62

    expressao          go to state 63
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 44

   23 statement: composto_decl •

    $default  reduce using rule 23 (statement)


State 45

   20 statement_list: statement_list statement •

    $default  reduce using rule 20 (statement_list)


State 46

   22 statement: expressao_decl •

    $default  reduce using rule 22 (statement)


State 47

   24 statement: selecao_decl •

    $default  reduce using rule 24 (statement)


State 48

   25 statement: iteracao_decl •

    $default  reduce using rule 25 (statement)


State 49

   26 statement: retorno_decl •

    $default  reduce using rule 26 (statement)


State 50

   27 expressao_decl: expressao • SEMICOLON

    SEMICOLON  shift, and go to state 64


State 51

   34 expressao: var • ATRIBUICAO expressao
   55 fator: var •

    ATRIBUICAO  shift, and go to state 65

    $default  reduce using rule 55 (fator)


State 52

   35 expressao: simples_expressao •

    $default  reduce using rule 35 (expressao)


State 53

   38 simples_expressao: soma_expressao • relacional soma_expressao
   39                  | soma_expressao •
   46 soma_expressao: soma_expressao • soma termo

    MAIS         shift, and go to state 66
    MAIOR        shift, and go to state 67
    MENOS        shift, and go to state 68
    MENOR        shift, and go to state 69
    MAIOR_IGUAL  shift, and go to state 70
    MENOR_IGUAL  shift, and go to state 71
    DIFERENTE    shift, and go to state 72
    IGUAL        shift, and go to state 73

    $default  reduce using rule 39 (simples_expressao)

    relacional  go to state 74
    soma        go to state 75


State 54

   47 soma_expressao: termo •
   50 termo: termo • mult fator

    DIVISAO        shift, and go to state 76
    MULTIPLICACAO  shift, and go to state 77

    $default  reduce using rule 47 (soma_expressao)

    mult  go to state 78


State 55

   51 termo: fator •

    $default  reduce using rule 51 (termo)


State 56

   56 fator: ativacao •

    $default  reduce using rule 56 (fator)


State 57

   58 ativacao: IDENTIFICADOR L_PAR • args R_PAR

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38

    $default  reduce using rule 60 (args)

    expressao          go to state 79
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56
    args               go to state 80
    arg_list           go to state 81


State 58

   37 var: IDENTIFICADOR L_BRAC • expressao R_BRAC

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38

    expressao          go to state 82
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 59

   54 fator: L_PAR expressao • R_PAR

    R_PAR  shift, and go to state 83


State 60

   29 selecao_decl: IF L_PAR • expressao R_PAR statement
   30             | IF L_PAR • expressao R_PAR statement ELSE statement

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38

    expressao          go to state 84
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 61

   31 iteracao_decl: WHILE L_PAR • expressao R_PAR statement

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38

    expressao          go to state 85
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 62

   32 retorno_decl: RETURN SEMICOLON •

    $default  reduce using rule 32 (retorno_decl)


State 63

   33 retorno_decl: RETURN expressao • SEMICOLON

    SEMICOLON  shift, and go to state 86


State 64

   27 expressao_decl: expressao SEMICOLON •

    $default  reduce using rule 27 (expressao_decl)


State 65

   34 expressao: var ATRIBUICAO • expressao

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38

    expressao          go to state 87
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 66

   48 soma: MAIS •

    $default  reduce using rule 48 (soma)


State 67

   41 relacional: MAIOR •

    $default  reduce using rule 41 (relacional)


State 68

   49 soma: MENOS •

    $default  reduce using rule 49 (soma)


State 69

   40 relacional: MENOR •

    $default  reduce using rule 40 (relacional)


State 70

   44 relacional: MAIOR_IGUAL •

    $default  reduce using rule 44 (relacional)


State 71

   42 relacional: MENOR_IGUAL •

    $default  reduce using rule 42 (relacional)


State 72

   43 relacional: DIFERENTE •

    $default  reduce using rule 43 (relacional)


State 73

   45 relacional: IGUAL •

    $default  reduce using rule 45 (relacional)


State 74

   38 simples_expressao: soma_expressao relacional • soma_expressao

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38

    var             go to state 88
    soma_expressao  go to state 89
    termo           go to state 54
    fator           go to state 55
    ativacao        go to state 56


State 75

   46 soma_expressao: soma_expressao soma • termo

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38

    var       go to state 88
    termo     go to state 90
    fator     go to state 55
    ativacao  go to state 56


State 76

   53 mult: DIVISAO •

    $default  reduce using rule 53 (mult)


State 77

   52 mult: MULTIPLICACAO •

    $default  reduce using rule 52 (mult)


State 78

   50 termo: termo mult • fator

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38

    var       go to state 88
    fator     go to state 91
    ativacao  go to state 56


State 79

   62 arg_list: expressao •

    $default  reduce using rule 62 (arg_list)


State 80

   58 ativacao: IDENTIFICADOR L_PAR args • R_PAR

    R_PAR  shift, and go to state 92


State 81

   59 args: arg_list •
   61 arg_list: arg_list • COMMA expressao

    COMMA  shift, and go to state 93

    $default  reduce using rule 59 (args)


State 82

   37 var: IDENTIFICADOR L_BRAC expressao • R_BRAC

    R_BRAC  shift, and go to state 94


State 83

   54 fator: L_PAR expressao R_PAR •

    $default  reduce using rule 54 (fator)


State 84

   29 selecao_decl: IF L_PAR expressao • R_PAR statement
   30             | IF L_PAR expressao • R_PAR statement ELSE statement

    R_PAR  shift, and go to state 95


State 85

   31 iteracao_decl: WHILE L_PAR expressao • R_PAR statement

    R_PAR  shift, and go to state 96


State 86

   33 retorno_decl: RETURN expressao SEMICOLON •

    $default  reduce using rule 33 (retorno_decl)


State 87

   34 expressao: var ATRIBUICAO expressao •

    $default  reduce using rule 34 (expressao)


State 88

   55 fator: var •

    $default  reduce using rule 55 (fator)


State 89

   38 simples_expressao: soma_expressao relacional soma_expressao •
   46 soma_expressao: soma_expressao • soma termo

    MAIS   shift, and go to state 66
    MENOS  shift, and go to state 68

    $default  reduce using rule 38 (simples_expressao)

    soma  go to state 75


State 90

   46 soma_expressao: soma_expressao soma termo •
   50 termo: termo • mult fator

    DIVISAO        shift, and go to state 76
    MULTIPLICACAO  shift, and go to state 77

    $default  reduce using rule 46 (soma_expressao)

    mult  go to state 78


State 91

   50 termo: termo mult fator •

    $default  reduce using rule 50 (termo)


State 92

   58 ativacao: IDENTIFICADOR L_PAR args R_PAR •

    $default  reduce using rule 58 (ativacao)


State 93

   61 arg_list: arg_list COMMA • expressao

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38

    expressao          go to state 97
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 94

   37 var: IDENTIFICADOR L_BRAC expressao R_BRAC •

    $default  reduce using rule 37 (var)


State 95

   29 selecao_decl: IF L_PAR expressao R_PAR • statement
   30             | IF L_PAR expressao R_PAR • statement ELSE statement

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38
    L_CHAVES       shift, and go to state 26
    SEMICOLON      shift, and go to state 40
    IF             shift, and go to state 41
    WHILE          shift, and go to state 42
    RETURN         shift, and go to state 43

    composto_decl      go to state 44
    statement          go to state 98
    expressao_decl     go to state 46
    selecao_decl       go to state 47
    iteracao_decl      go to state 48
    retorno_decl       go to state 49
    expressao          go to state 50
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 96

   31 iteracao_decl: WHILE L_PAR expressao R_PAR • statement

    NUMERO         shift, and go to state 36
    IDENTIFICADOR  shift, and go to state 37
    L_PAR          shift, and go to state 38
    L_CHAVES       shift, and go to state 26
    SEMICOLON      shift, and go to state 40
    IF             shift, and go to state 41
    WHILE          shift, and go to state 42
    RETURN         shift, and go to state 43

    composto_decl      go to state 44
    statement          go to state 99
    expressao_decl     go to state 46
    selecao_decl       go to state 47
    iteracao_decl      go to state 48
    retorno_decl       go to state 49
    expressao          go to state 50
    var                go to state 51
    simples_expressao  go to state 52
    soma_expressao     go to state 53
    termo              go to state 54
    fator              go to state 55
    ativacao           go to state 56


State 97

   61 arg_list: arg_list COMMA expressao •

    $default  reduce using rule 61 (arg_list)


State 98

   29 selecao_decl: IF L_PAR expressao R_PAR statement •
   30             | IF L_PAR expressao R_PAR statement • ELSE statement

    ELSE  shift, and go to state 100

    ELSE      [reduce using rule 29 (selecao_decl)]
    $default  reduce using rule 29 (selecao_decl)

    shift/reduce conflict on token ELSE:
       29 selecao_decl: IF L_PAR expressao R_PAR statement •
       30 selecao_decl: IF L_PAR expressao R_PAR statement • ELSE statement
      Example: IF L_PAR expressao R_PAR IF L_PAR expressao R_PAR statement • ELSE statement
      Shift derivation
        selecao_decl
        ↳ 29: IF L_PAR expressao R_PAR statement
                                       ↳ 24: selecao_decl
                                             ↳ 30: IF L_PAR expressao R_PAR statement • ELSE statement
      Reduce derivation
        selecao_decl
        ↳ 30: IF L_PAR expressao R_PAR statement                                        ELSE statement
                                       ↳ 24: selecao_decl
                                             ↳ 29: IF L_PAR expressao R_PAR statement •



State 99

   31 iteracao_decl: WHILE L_PAR expressao R_PAR statement •

    $default  reduce using rule 31 (iteracao_decl)


State 100

   30 selecao_decl: IF L_PAR expressao R_PAR statement ELSE • statement
